--- a/templates/base.html
+++ b/templates/base.html
@@ -12,9 +12,16 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light">
         <a class="navbar-brand" href="{{ url_for('index')}}">FlaskBlog</a>
+        <li class="nav-item">
+            <a class="nav-link" href="{{url_for('create')}}">New Post</a>
+        </li>
+        {% for message in get_flashed_messages() %}
+        <div class="alert alert-danger">{{ message }}</div>
+        {% endfor %}
     </nav>
     <div class="container">
         {% block content %} {% endblock %}
+
     </div>
 </body>
 
